# zendesk-first-responder-crew

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
src/zendesk_first_responder_crew/: crew.py  main.py  server.py
src/zendesk_first_responder_crew/config/: agents.yaml  tasks.yaml
src/zendesk_first_responder_crew/tools/: custom_tool.py
